improvement: fixed broken style by moving it out of component and making global

--- a/src/components/FlyModal/FlyModal.sass
+++ b/src/components/FlyModal/FlyModal.sass
@@ -104,17 +104,6 @@
 		input
 			margin: 0
 
-	ul.SiteList
-		margin: 10px 0 0
-		padding: 0
-		list-style: none
-
-		li
-			font-size: 16px
-			font-weight: 500
-			margin: 8px 0
-			color: $green
-
 	.MessageAboveButton
 		@include theme-color-gray-else-gray25
 		margin: 30px 0
